--- a/html/student-invoice.html
+++ b/html/student-invoice.html
@@ -31,12 +31,12 @@
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.13.6/datatables.min.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.13.6/datatables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <!-- Page CSS -->
@@ -256,58 +256,60 @@
                                     data-bs-target="#add-invoice">Add Invoice</button>
                             </div>
 
+<div class="table-responsive">
+    
+    <table id="inprogress" class="table  nowrap border-0 " style="width:100%">
+        <thead>
 
-                            <table id="inprogress" class="table  nowrap border-0 " style="width:100%">
-                                <thead>
-
-                                    <tr class="dt-head">
-                                        <th style="text-align:center; display: flex;">#</th>
-                                        <th style="text-align:center; "> Invoice # </th>
-                                        <th style="text-align:center; "> Invoice Date </th>
-                                        <th style="text-align:center; "> Student Name </th>
-                                        <th style="text-align:center; "> Contact # </th>
-                                        <th style="text-align:center; "> Currency </th>
-                                        <th style="text-align:center; "> Fees </th>
-                                        <th style="text-align:center; "> Discount </th>
-                                        <th style="text-align:center; "> Payment Paid </th>
-                                        <th style="text-align:center; "> Payment remaining </th>
-                                        <th style="text-align:center; "> Actions </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="text-center d-flex">1</td>
-
-
-                                        <td class="text-center"> 100</td>
-
-                                        <td class="text-center"> 2023-12-07</td>
-                                        <td class="text-center">
-                                            TALHA MEMON </td>
-
-                                        <td class="text-center"> 03471257976 </td>
-                                        <td class="text-center"> EURO</td>
-                                        <td class="text-center"> 4</td>
-                                        <td class="text-center"> 10</td>
-                                        <td class="text-center"> 6356</td>
-
-                                        <td class="text-center"> -6366</td>
+            <tr class="dt-head">
+                <th style="text-align:center; display: flex;">#</th>
+                <th style="text-align:center; "> Invoice # </th>
+                <th style="text-align:center; "> Invoice Date </th>
+                <th style="text-align:center; "> Student Name </th>
+                <th style="text-align:center; "> Contact # </th>
+                <th style="text-align:center; "> Currency </th>
+                <th style="text-align:center; "> Fees </th>
+                <th style="text-align:center; "> Discount </th>
+                <th style="text-align:center; "> Payment Paid </th>
+                <th style="text-align:center; "> Payment remaining </th>
+                <th style="text-align:center; "> Actions </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="text-center d-flex">1</td>
 
 
+                <td class="text-center"> 100</td>
 
-                                        <td class="text-center">
-                                            <button type="button" class="btn btn-primary btn-xs" data-bs-toggle="modal"
-                                                data-bs-target="#edit-invoice">Edit</button>
+                <td class="text-center"> 2023-12-07</td>
+                <td class="text-center">
+                    TALHA MEMON </td>
 
-                                            <button type="button" class="btn btn-primary btn-xs">Pdf/Print</button>
-                                            <button type="button" class="btn btn-danger btn-xs" data-bs-toggle="modal"
-                                                data-bs-target="#delete">Delete</button>
-                                        </td>
-                                    </tr>
+                <td class="text-center"> 03471257976 </td>
+                <td class="text-center"> EURO</td>
+                <td class="text-center"> 4</td>
+                <td class="text-center"> 10</td>
+                <td class="text-center"> 6356</td>
+
+                <td class="text-center"> -6366</td>
 
 
-                                </tbody>
-                            </table>
+
+                <td class="text-center">
+                    <button type="button" class="btn btn-primary btn-xs" data-bs-toggle="modal"
+                        data-bs-target="#edit-invoice">Edit</button>
+
+                    <button type="button" class="btn btn-primary btn-xs">Pdf/Print</button>
+                    <button type="button" class="btn btn-danger btn-xs" data-bs-toggle="modal"
+                        data-bs-target="#delete">Delete</button>
+                </td>
+            </tr>
+
+
+        </tbody>
+    </table>
+</div>
                         </div>
 
 
@@ -1208,10 +1210,11 @@
         <script async defer src="https://buttons.github.io/buttons.js"></script>
 
         <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-        <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+        <!-- <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
         <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
-        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script> -->
+        <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
         <script src="assets/Js/table.js"></script>
