--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -521,7 +521,7 @@
                                             <tr class="dt-head">
 
                                                 <th>#</th>
-                                                <th>Today Date</th>
+                                                <th> Date</th>
                                                 <th>Time</th>
                                                 <th>Std Name </th>
                                                 <th> Number</th>
